messaggio fare login, frecce piattaforme streaming, link libri cucina, tolto link a pagina contattaci

--- a/cucina/pagine/Imparare.html
+++ b/cucina/pagine/Imparare.html
@@ -148,7 +148,9 @@
     <div class="card mb-3 libro" id="card0"> <!-- ogni card ha un id diverso-->
       <div class="row no-gutters">
         <div class="col-md-4">
-          <img src="../../assets/img/cucina/ImparareCard1.jpg" class="card-img" alt="...">
+          <a href="https://www.amazon.it/Grammatica-sapori-delle-infinite-combinazioni/dp/885800440X" target="_blank">
+            <img src="../../assets/img/cucina/ImparareCard1.jpg" class="card-img" alt="...">
+          </a>
         </div>
         <div class="col-md-8">
           <div class="card-body">
@@ -170,7 +172,9 @@
     <div class="card mb-3 libro" id="card1">
       <div class="row no-gutters">
         <div class="col-md-4">
+         <a href="https://www.amazon.it/strumenti-ricette-consigli-competenze-creativit%C3%A0/dp/8809850122" target="_blank"> 
           <img src="../../assets/img/cucina/ImparareCard2.jpg" class="card-img" alt="...">
+         </a>
         </div>
         <div class="col-md-8">
           <div class="card-body">
@@ -197,7 +201,9 @@
     <div class="card mb-3 libro" id="card2">
       <div class="row no-gutters">
         <div class="col-md-4">
-          <img src="../../assets/img/cucina/ImparareCard3.jpg" class="card-img" alt="...">
+          <a href="https://www.amazon.it/mia-scuola-cucina-Ediz-illustrata/dp/8850220375/ref=sr_1_1?__mk_it_IT=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1HEHAGFRWGFCK&dchild=1&keywords=la+mia+scuola+di+cucina&qid=1624614512&s=books&sprefix=la+mia+scuola%2Cstripbooks%2C346&sr=1-1" target="_blank">
+            <img src="../../assets/img/cucina/ImparareCard3.jpg" class="card-img" alt="...">
+          </a>
         </div>
         <div class="col-md-8">
           <div class="card-body">
@@ -222,7 +228,9 @@
     <div class="card mb-3 tutorial" id="card3">
       <div class="row no-gutters">
         <div class="col-md-4">
+          <a href="https://www.giallozafferano.it/" target="_blank">
           <img src="../../assets/img/cucina/ImparareCard4.png" class="card-img" alt="...">
+          </a>
         </div>
         <div class="col-md-8">
           <div class="card-body">
@@ -245,7 +253,9 @@
     <div class="card mb-3 corso" id="card4">
       <div class="row no-gutters">
         <div class="col-md-4">
+          <a href="https://www.gamberorosso.it/" target="_blank">
           <img src="../../assets/img/cucina/ImparareCard5.jpg" class="card-img" alt="...">
+        </a>
         </div>
         <div class="col-md-8">
           <div class="card-body">
@@ -266,7 +276,9 @@
     <div class="card mb-3 corso" id="card5">
       <div class="row no-gutters">
         <div class="col-md-4">
+          <a href="https://lifelearning.it/" target="_blank">
           <img src="../../assets/img/cucina/ImparareCard6.gif" class="card-img" alt="...">
+          </a>
         </div>
         <div class="col-md-8">
           <div class="card-body">
@@ -287,7 +299,9 @@
     <div class="card mb-3 tutorial" id="card6">
       <div class="row no-gutters">
         <div class="col-md-4">
+          <a href="https://www.youtube.com/user/CookAroundTv" target="_blank">
           <img src="../../assets/img/cucina/ImparareCard7.jpg" class="card-img" alt="...">
+          </a>
         </div>
         <div class="col-md-8">
           <div class="card-body">
@@ -308,7 +322,9 @@
     <div class="card mb-3 tutorial" id="card7">
       <div class="row no-gutters">
         <div class="col-md-4">
+          <a href="https://www.youtube.com/user/ChefStefanoBarbato" target="_blank">
           <img src="../../assets/img/cucina/ImparareCard8.jpg" class="card-img" alt="...">
+          </a>
         </div>
         <div class="col-md-8">
           <div class="card-body">
@@ -328,7 +344,9 @@
     <div class="card mb-3 libro" id="card8">
       <div class="row no-gutters">
         <div class="col-md-4">
+         <a href="https://www.amazon.it/Guida-grande-cucina-Auguste-Escoffier/dp/8899898669" target="_blank"> 
           <img src="../../assets/img/cucina/ImparareCard9.jpg" class="card-img" alt="...">
+        </a>
         </div>
         <div class="col-md-8">
           <div class="card-body">
@@ -349,7 +367,9 @@
     <div class="card mb-3 corso" id="card9">
       <div class="row no-gutters">
         <div class="col-md-4">
+          <a href="https://www.clubacademy.it/" target="_blank">
           <img src="../../assets/img/cucina/ImparareCard10.jpg" class="card-img" alt="...">
+          </a>
         </div>
         <div class="col-md-8">
           <div class="card-body">
@@ -370,7 +390,9 @@
     <div class="card mb-3 corso" id="card10">
       <div class="row no-gutters">
         <div class="col-md-4">
+          <a href="https://diventachef.it/" target="_blank">
           <img src="../../assets/img/cucina/ImparareCard11.png" class="card-img" alt="...">
+          </a>
         </div>
         <div class="col-md-8">
           <div class="card-body">
