--- a/intrattenimento/pagine/FilmSerieTV.html
+++ b/intrattenimento/pagine/FilmSerieTV.html
@@ -16,8 +16,9 @@
         crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        
-        <link rel="stylesheet" href="../../css/IntrattenimentoFilmSerie.css">
+     
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">    
+    <link rel="stylesheet" href="../../css/IntrattenimentoFilmSerie.css">
     <script type="text/javascript" src="../../js/IntrattenimentoFilmSerie.js"></script>
 
     <script type="text/javascript" src="../../js/ControllaSessione.js"></script>
@@ -122,8 +123,14 @@
                 <!-- Titolo -->
                 <div class="card-header text-center" id="netflix-heading" data-toggle="collapse" data-target="#netflix"
                     aria-expanded="true" aria-controls="netflix">
-                    <img class="logo logo-active" src="../../assets/img/intrattenimento/FilmSerieNetflixLogo.png">
-                    <h4 class="title-fade title-fade-active">Netflix</h4>
+                    <div class="row">
+                      <div class="col-sm-4 align-self-center"><i class="fas fa-angle-double-down"></i></div>
+                        <div class="col-sm-4">
+                        <img class="logo logo-active" src="../../assets/img/intrattenimento/FilmSerieNetflixLogo.png">
+                        <h4 class="title-fade title-fade-active">Netflix</h4>
+                        </div>
+                        <div class="col-sm-4 align-self-center"><i class="fas fa-angle-double-down"></i></div>
+                    </div>
                 </div>
 
                 <!-- Testo della card -->
@@ -163,8 +170,14 @@
             <div class="card">
                 <div class="card-header text-center" id="primevideo-heading" data-toggle="collapse"
                     data-target="#primevideo" aria-expanded="true" aria-controls="primevideo">
+                    <div class="row">
+                    <div class="col-sm-4 align-self-center"><i class="fas fa-angle-double-down"></i></div>
+                    <div class="col-sm-4">                    
                     <img class="logo" src="../../assets/img/intrattenimento/FilmSeriePrimeVideoLogo.png">
                     <h4 class="title-fade">Prime Video</h4>
+                    </div>
+                    <div class="col-sm-4 align-self-center"><i class="fas fa-angle-double-down"></i></div>
+                    </div>
                 </div>
 
                 <div id="primevideo" class="collapse" aria-labelledby="primevideo-heading"
@@ -198,8 +211,14 @@
             <div class="card">
                 <div class="card-header text-center" id="infinity-heading" data-toggle="collapse"
                     data-target="#infinity" aria-expanded="true" aria-controls="infinity">
+                    <div class="row">
+                    <div class="col-sm-4 align-self-center"><i class="fas fa-angle-double-down"></i></div>
+                    <div class="col-sm-4">  
                     <img class="logo" src="../../assets/img/intrattenimento/FilmSerieInfinityLogo.png">
                     <h4 class="title-fade">Infinity</h4>
+                    </div>
+                    <div class="col-sm-4 align-self-center"><i class="fas fa-angle-double-down"></i></div>
+                    </div>
                 </div>
 
                 <div id="infinity" class="collapse" aria-labelledby="infinity-heading" data-parent="#accordionServices">
@@ -232,8 +251,14 @@
             <div class="card">
                 <div class="card-header text-center" id="vvvvid-heading" data-toggle="collapse" data-target="#vvvvid"
                     aria-expanded="true" aria-controls="vvvvid">
+                    <div class="row">
+                    <div class="col-sm-4 align-self-center"><i class="fas fa-angle-double-down"></i></div>
+                    <div class="col-sm-4">  
                     <img class="logo" src="../../assets/img/intrattenimento/FilmSerieVvvvidLogo.png">
                     <h4 class="title-fade">Vvvvid</h4>
+                    </div>
+                    <div class="col-sm-4 align-self-center"><i class="fas fa-angle-double-down"></i></div>
+                    </div>
                 </div>
 
                 <div id="vvvvid" class="collapse" aria-labelledby="vvvvid-heading" data-parent="#accordionServices">
@@ -266,8 +291,14 @@
             <div class="card">
                 <div class="card-header text-center" id="nowtv-heading" data-toggle="collapse" data-target="#nowtv"
                     aria-expanded="true" aria-controls="nowtv">
+                    <div class="row">
+                    <div class="col-sm-4 align-self-center"><i class="fas fa-angle-double-down"></i></div>
+                    <div class="col-sm-4">  
                     <img class="logo" src="../../assets/img/intrattenimento/FilmSerieNowTVLogo.png">
                     <h4 class="title-fade">Now TV</h4>
+                    </div>
+                    <div class="col-sm-4 align-self-center"><i class="fas fa-angle-double-down"></i></div>
+                    </div>
                 </div>
 
                 <div id="nowtv" class="collapse" aria-labelledby="nowtv-heading" data-parent="#accordionServices">
@@ -302,8 +333,14 @@
             <div class="card">
                 <div class="card-header text-center" id="disneyplus-heading" data-toggle="collapse"
                     data-target="#disneyplus" aria-expanded="true" aria-controls="disneyplus">
+                    <div class="row">
+                    <div class="col-sm-4 align-self-center"><i class="fas fa-angle-double-down"></i></div>
+                    <div class="col-sm-4"> 
                     <img class="logo" src="../../assets/img/intrattenimento/FilmSerieDisneyPlusLogo.png">
                     <h4 class="title-fade">Disney Plus</h4>
+                    </div>
+                    <div class="col-sm-4 align-self-center"><i class="fas fa-angle-double-down"></i></div>
+                    </div>
                 </div>
 
                 <div id="disneyplus" class="collapse" aria-labelledby="disneyplus-heading"
@@ -336,8 +373,14 @@
             <div class="card">
                 <div class="card-header text-center" id="raiplay-heading" data-toggle="collapse"
                     data-target="#raiplay" aria-expanded="true" aria-controls="raiplay">
+                    <div class="row">
+                    <div class="col-sm-4 align-self-center"><i class="fas fa-angle-double-down"></i></div>
+                    <div class="col-sm-4"> 
                     <img class="logo" src="../../assets/img/intrattenimento/FilmSerieRaiPlayLogo.gif">
                     <h4 class="title-fade">RaiPlay</h4>
+                    </div>
+                    <div class="col-sm-4 align-self-center"><i class="fas fa-angle-double-down"></i></div>
+                    </div>
                 </div>
 
                 <div id="raiplay" class="collapse" aria-labelledby="raiplay-heading"
