--- a/workout/pagine/Contatta.html
+++ b/workout/pagine/Contatta.html
@@ -105,7 +105,7 @@
       <div class="row"><h6 style="margin-left: 5px;"><a href="../HomeWorkout.html" style="color: aliceblue;">Workout</h6></a> <h6 style="color:aliceblue;">></h6> <h6><a href="#" style="color: aliceblue;">Contatta allenatore</a></h6></div>
   </div>
    <!--finite le navbar metto il titolo-->
-   <h1 class="title text-center text-light">Complila il form per contattare l'allenatore</h1>
+   <h1 class="title text-center text-light">Compila il form per contattare l'allenatore</h1>
 
 
  
